# Django_course

./: README.md  data.json  manage.py  pyproject.toml
Django_course/: asgi.py  settings.py  urls.py  wsgi.py
blog/: forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_create.html  blog_detail.html  blog_list.html
main/: admin.py  forms.py  models.py  newsletter_create_view.py  services.py  urls.py  views.py
main/management/commands/: fill.py
main/migrations/: 0001_initial.py  0002_alter_message_options_alter_customer_comment_and_more.py  0002_alter_newsletter_send_time.py  0002_alter_newsletter_status.py  0003_alter_newsletter_send_time.py  0003_newsletter_subject_alter_message_subject.py  0004_alter_log_status.py  0004_alter_newsletter_subject.py  0005_alter_customer_email.py  0006_remove_message_body_remove_message_subject_and_more.py  0007_alter_newsletter_subject.py  0008_blogpost.py  0009_delete_blogpost.py
main/templates/main/: base.html  contact.html  index.html
main/views_package/customer_views/: customer_create_view.py  customer_delete_view.py  customer_list_view.py  customer_update_view.py
main/views_package/index_view/: index_view.py
main/views_package/log_view/: log_detail_view.py  log_list_view.py
main/views_package/message_views/: message_create_view.py  (+3 more)
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_country_alter_user_avatar_alter_user_email_and_more.py  0003_alter_user_managers.py  0004_alter_user_is_active.py
(+30 files in other folders)
